--- a/RaalProjectPreview/Views/Shared/_Layout.cshtml
+++ b/RaalProjectPreview/Views/Shared/_Layout.cshtml
@@ -4,26 +4,47 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - ASP.NET Code preview</p>
-        </footer>
-    </div>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link" href="/Home/Index">Главная страница</a>
+        </li>
+    </ul>
+        <div class="navbar navbar-collapse fixed-top navbar-dark bg-dark" id="navbarNav">
+            <ul class="navbar-nav">
+                @if (Session["Authed"] == null || (bool)Session["Authed"] == false)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Login">LogIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/SignIn">SignIn</a>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/LogOut">LogOut</a>
+                    </li>
+                }
+            </ul>
+        </div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - ASP.NET Code preview</p>
+            </footer>
+        </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        @RenderSection("scripts", required: false)
 </body>
 </html>
