--- a/RaalProjectPreview/Views/Shared/_Layout.cshtml
+++ b/RaalProjectPreview/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -13,13 +13,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link" href="/Home/Index">Главная страница</a>
-        </li>
-    </ul>
-        <div class="navbar navbar-collapse fixed-top navbar-dark bg-dark" id="navbarNav">
-            <ul class="navbar-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbarNav">
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
                 @if (Session["Authed"] == null || (bool)Session["Authed"] == false)
                 {
                     <li class="nav-item">
@@ -37,14 +33,15 @@
                 }
             </ul>
         </div>
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - ASP.NET Code preview</p>
-            </footer>
-        </div>
+    </nav>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - ASP.NET Code preview</p>
+        </footer>
+    </div>
 
-        @RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)
 </body>
 </html>
