--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -1,6 +1,90 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-}
+<h2>Панель покупателя</h2>
+<div id="customerPanelVue">
+    <div class="btn-group" role="group">
+        <button type="button" v-on:click="ShowMyOrders()" class="btn btn-secondary">Мои заказы</button>
+        <button type="button" v-on:click="GetItemList()" class="btn btn-secondary">Список товаров</button>
+        <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
+    </div>
+    <div style="margin-top: .4em;" class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr class="success">
+                    <th></th>
+                    <th class="success" colspan="3">Товары</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Category</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="(item, index) in Items">
+                    <td>{{index}}</td>
+                    <td>{{item.Name}}</td>
+                    <td>{{item.Price}}</td>
+                    <td>{{item.Category}}</td>
+                    <td>
+                        <button class="btn btn-secondary" v-on:click="AddItemToCase(index)" type="button">
+                            +
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <hr />
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="Check1">
+        <label class="form-check-label" for="Check1" v-model="OnlyNewOrders">Only new orders</label>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr class="success">
+                    <th></th>
+                    <th class="success" colspan="4">Данные заказов</th>
+                </tr>
+                <tr>
+                    <th>#</th>
+                    <th>Order date</th>
+                    <th>Shipment date</th>
+                    <th>Order number</th>
+                    <th>Status</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="(order, index) in filteredOrderList">
+                    <td>{{index}}</td>
+                    <td>{{order.OrderDate}}</td>
+                    <td>{{order.ShipmentDate}}</td>
+                    <td>{{order.OrderNumber}}</td>
+                    <td>{{order.Status}}</td>
+                    <td>
+                        <button class="btn btn-warning" v-on:click="CloseOrder(index)" type="button">
+                            Cancel
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-<h2>Customer</h2>
+    <div class="card" style="width: 18rem;">
+        <div class="card-header">
+            Корзина
+        </div>
+        <ul class="list-group list-group-flush">
+            <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
+                {{item.Name}}
+            </li>
+        </ul>
+        <button type="button" v-on:click="CreateOrder()">Заказать</button>
+    </div>
+</div>
+<script type="text/javascript" src="~/Scripts/Vue/CustomerPanelVue.js"></script>
