--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -6,47 +6,71 @@
         <button type="button" v-on:click="GetItemList()" class="btn btn-secondary">Список товаров</button>
         <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
     </div>
-    <div style="margin-top: .4em;" class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr class="success">
-                    <th></th>
-                    <th class="success" colspan="3">Товары</th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Category</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="(item, index) in Items">
-                    <td>{{index}}</td>
-                    <td>{{item.Name}}</td>
-                    <td>{{item.Price}}</td>
-                    <td>{{item.Category}}</td>
-                    <td>
-                        <button class="btn btn-secondary" v-on:click="AddItemToCase(index)" type="button">
-                            +
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div style="margin-top: .4em;" class="row">
+        <div class="col-md-8">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        <tr class="success">
+                            <th class="success" colspan="3">Товары</th>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Category</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="(item, index) in Items">
+                            <td>{{index}}</td>
+                            <td>{{item.Name}}</td>
+                            <td>{{item.Price}}</td>
+                            <td>{{item.Category}}</td>
+                            <td>
+                                <button class="btn btn-secondary" v-on:click="AddItemToCase(index)" type="button">
+                                    +
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-offset-1 col-md-3">
+            <div class="card">
+                <div class="card-header">
+                    Корзина
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
+                        {{item.Name}} price: {{item.Name}} $
+                    </li>
+                </ul>
+                <div class="card-body">
+                    <button type="button" class="card-link" v-on:click="CreateOrder()">Заказать</button>
+                </div>
+            </div>
+        </div>
     </div>
+
     <hr />
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="Check1">
-        <label class="form-check-label" for="Check1" v-model="OnlyNewOrders">Only new orders</label>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" v-model="OnlyNewOrders">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Show only new orders</label>
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
-                <tr class="success">
+                <tr>
                     <th></th>
+                </tr>
+                <tr class="success">
                     <th class="success" colspan="4">Данные заказов</th>
                 </tr>
                 <tr>
@@ -67,24 +91,12 @@
                     <td>{{order.Status}}</td>
                     <td>
                         <button class="btn btn-warning" v-on:click="CloseOrder(index)" type="button">
-                            Cancel
+                            Close
                         </button>
                     </td>
                 </tr>
             </tbody>
         </table>
-    </div>
-
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            Корзина
-        </div>
-        <ul class="list-group list-group-flush">
-            <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
-                {{item.Name}}
-            </li>
-        </ul>
-        <button type="button" v-on:click="CreateOrder()">Заказать</button>
     </div>
 </div>
 <script type="text/javascript" src="~/Scripts/Vue/CustomerPanelVue.js"></script>
