--- a/RaalProjectPreview/Views/Shared/_Layout.cshtml
+++ b/RaalProjectPreview/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
         <footer>
