--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -49,7 +49,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li v-for="(item, CaseItems) in CaseItems" class="list-group-item">
-                        {{item.Name}} price: {{item.Name}} $
+                        {{item.Name}} price: {{item.Price}}$
                     </li>
                 </ul>
                 <div class="card-body">
@@ -97,6 +97,26 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="modal" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center" id="alertModalLabel">Server response</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h4 v-bind:class="[alertClass]" class="text-center">
+                        {{alertMsg}}
+                    </h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript" src="~/Scripts/Vue/CustomerPanelVue.js"></script>
